--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">PopularMovies</string>
     <string name="menu_popularity">sort by popularity</string>
     <string name="menu_rating">sort by rating</string>
+
+    <!-- API Parameters - For internal use only -->
+    <string name="param_sort_by_key">sort_by</string>
+    <string name="param_api_key">api_key</string>
 </resources>
