style: update MovieDetailsActivity UI presentation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
 
     <!-- API Parameters - For internal use only -->
     <string name="param_api_key">api_key</string>
+    <string name="cd_movie_poster">Movie Poster</string>
 
 </resources>
