feat: add tabs for movie details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <!-- API Parameters - For internal use only -->
     <string name="param_api_key">api_key</string>
     <string name="cd_movie_poster">Movie Poster</string>
+    <string name="tab_trailer">Trailer</string>
+    <string name="tab_reviews">User Reviews</string>
+    <string name="tab_information">Information</string>
 
 </resources>
