feat: add composite pattern   - add composite pattern and components for JSON queries

--- a/app/TODO.txt
+++ b/app/TODO.txt
@@ -1,1 +1,2 @@
 TODO:// Replace all the layouts with ConstraintLayout where possible
+TODO:// Rename the composite components as RequestResult or Query or JsonResponse
