--- a/app/TODO.txt
+++ b/app/TODO.txt
@@ -1,2 +1,3 @@
-TODO:// Replace all the layouts with ConstraintLayout where possible
-TODO:// Rename the composite components as RequestResult or Query or JsonResponse
+TODO: Replace all the layouts with ConstraintLayout where possible
+TODO: Rename the composite components as RequestResult or Query or JsonResponse
+TODO: The Composite should really be injected not inherited
