Asynchronous LiveData exchange in DetailsActivity
The DetailsActivity now exchanges it's data using LiveData,
ViewModel and Executors to asynchronously save and load
favorite movies.

--- a/app/TODO.txt
+++ b/app/TODO.txt
@@ -1,2 +1,3 @@
 TODO: Create a button in trailer fragment element for sharing
-TODO: Polish the app
+TODO: Make accessing the SQL with room on another thread
+TODO: Polish the app!
