--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="tab_reviews">User Reviews</string>
     <string name="tab_information">Information</string>
     <string name="main_menu_fav">favorites</string>
+    <string name="no_reviews_found">No reviews found for this movie.</string>
+    <string name="no_trailers_found">No trailers found for this movie.</string>
 
 </resources>
